docs/20.2/README.md
<img src="https://raw.githubusercontent.com/JujuAdams/Bulb/master/LOGO.png" width="50%" style="display: block; margin: auto;" />
<h1 align="center">Bulb 20.2</h1>
<p align="center">2D lighting and shadows for GameMaker 2022 LTS by <a href="https://www.jujuadams.com/" target="_blank">Juju Adams</a></p>

<p align="center"><a href="https://github.com/JujuAdams/Bulb/releases/" target="_blank">Download the .yymps</a></p>
<p align="center">Talk about Bulb on the <a href="https://discord.gg/8krYCqr" target="_blank">Discord server</a></p>

---


**What platforms does Bulb support?**

Everything! You might run into edge cases on platforms that I don't regularly test; please [report any bugs](https://github.com/JujuAdams/Bulb/issues) if and when you find them.

&nbsp;

**What versions of GameMaker does Bulb support?**

Bulb primarily supports GameMaker LTS 2022, and in theory supports every version of GameMaker later than that. Later versions of GameMaker may change functionality in a way that Bulb is not forwards-compatible with, but Bulb uses only native GameMaker functions so is in the best possible position for long-term compatibility.

&nbsp;

**How is Bulb licensed? Can I use it for commercial projects?**

[Bulb is released under the MIT license](https://github.com/JujuAdams/Bulb/blob/master/LICENSE). This means you can use it for whatever purpose you want, including commercial projects. It'd mean a lot to me if you'd drop my name in the credits (Juju Adams) and/or say thanks, but you're under no obligation to do so.

&nbsp;

**I think you're missing a useful feature and I'd like you to implement it!**

Great! Please make a [feature request](https://github.com/JujuAdams/Bulb/issues). Feature requests make Bulb a more fun tool to use and gives me something to think about when I'm bored on public transport.

&nbsp;

**I found a bug, and it both scares and mildly annoys me. What is the best way to get the problem solved?**

Please make a [bug report](https://github.com/JujuAdams/Bulb/issues). We check GitHub every day and bug fixes usually go out a couple days after that. You can also grab me on the [Discord server](https://discord.gg/8krYCqr), but that's not a replacement for a nice clear bug report.

&nbsp;

**Who made Bulb?**

Bulb is built and maintained by [Juju](https://www.jujuadams.com/) who has been writing and rewriting lighting systems for a long time. Juju's worked on a lot of [commercial GameMaker games](http://www.jujuadams.com/). Bulb is the product of many years of tinkering in the world of graphics programming.

&nbsp;

**Can I send you donations? Are you going to start a Patreon?**

Thank you for wanting to show your appreciation - it really does mean a lot to me personally - but I'm fortunate enough to have a stable income from gamedev. I'm not looking to join Patreon as a creator at this moment in time. If you'd like to support my work then drop me a credit in your game and/or give a shout-out on the social media platform of your choice.
